# phenocluster

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: changelog.rst  cli.rst  conf.py  configuration.rst  index.rst  installation.rst  methods.rst  outputs.rst  profiles.rst  quickstart.rst  requirements.txt
phenocluster/: __init__.py  cache.py  cli.py  config.py  pipeline.py  profiles.py
phenocluster/cli/: __init__.py  app.py  banner.py  console.py  errors.py  validation.py
phenocluster/cli/commands/: __init__.py  config_cmd.py  run.py  version.py
phenocluster/config/: __init__.py  analysis.py  base.py  data.py  model.py  multistate.py  output.py
phenocluster/core/: __init__.py  exceptions.py  types.py
phenocluster/data/: __init__.py  encoder.py  imputer.py  outlier_handler.py  preprocessor.py  scaler.py  splitter.py
phenocluster/evaluation/: __init__.py  cluster_statistics.py  data_quality.py  external_validation.py  feature_characterization.py  metrics.py  outcome_analysis.py  stability.py  stats_utils.py  survival.py
phenocluster/evaluation/data_quality/: __init__.py  assessor.py  figures.py  mcar.py
phenocluster/evaluation/multistate/: __init__.py  analyzer.py  hazard_ratios.py  pathways.py  trajectory.py  types.py  (+1 more)
phenocluster/feature_selection/: __init__.py  base.py  correlation.py  lasso.py  mixed_selector.py  mutual_info.py  variance.py
phenocluster/model_selection/: __init__.py  grid_search.py  scorers.py
phenocluster/pipeline/: __init__.py  context.py  orchestrator.py  quality.py  warnings.py
phenocluster/utils/: __init__.py  logging.py  results_io.py
phenocluster/visualization/: __init__.py  _base.py  _cluster_distribution.py  _cluster_heatmap.py  _cluster_quality.py  _multistate.py  _outcome.py  _survival.py  plots.py
tests/: conftest.py  test_cache.py  test_pipeline.py
tests/cli/: test_cli.py
tests/data/: test_data_modules.py  test_data_quality.py
tests/evaluation/: test_external_validation.py  test_multistate.py  test_multistate_analyzer.py  test_outcome_analysis.py  test_stability.py  test_stats_utils.py  test_survival.py
tests/feature_selection/: test_feature_selection.py
tests/pipeline/: test_pipeline.py
tests/utils/: test_reporting.py
tests/visualization/: test_visualization_base.py  test_visualization_plots.py
(+26 files in other folders)
